# FinalProjectProposal

./: .gitignore  README.md  WORK_SPLIT.md  pyproject.toml
backend_service/: __init__.py  chat.py  config.py  main.py  models.py  rag.py  sources.py
industrial-digital-twin/: index.html  package-lock.json  package.json  playwright.config.js
industrial-digital-twin/src/: App.jsx  api.js  styles.css
industrial-digital-twin/src/data/: demoData.js
industrial-digital-twin/tests/: ui-smoke.spec.js
poc/: normalize_schema.py
src/api/: main.py
src/frontend/: app.py
src/retrieval/: build_embeddings.py
src/spark/: normalize_reviews_spark.py
tests/: test_chat_context.py
